// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`instruction prompt > should format prompt with instruction 1`] = `
"Below is an instruction that describes a task. Write a response that appropriately completes the request.

### Instruction:
instruction

### Response:
"
`;

exports[`instruction prompt > should format prompt with instruction and response prefix 1`] = `
"Below is an instruction that describes a task. Write a response that appropriately completes the request.

### Instruction:
instruction

### Response:
response prefix
"
`;

exports[`instruction prompt > should format prompt with system and instruction 1`] = `
"system

### Instruction:
system
instruction

### Response:
"
`;

exports[`text prompt > should format prompt 1`] = `
"Below is an instruction that describes a task. Write a response that appropriately completes the request.

### Instruction:
prompt

### Response:
"
`;
